// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should affect error message after formatting 1`] = `
"
<<<<<< before
ERROR: (import-spacing) /src/tslint/import-spacing/test.ts[1, 1]: Add space after 'import'
ERROR: (import-spacing) /src/tslint/import-spacing/test.ts[1, 7]: Add space after '*'

======
no error

>>>>>> after
"
`;

exports[`should be pretty after formatting 1`] = `
"
<<<<<< before
import*as ts from \\"typescript\\";

======
import * as ts from \\"typescript\\";

>>>>>> after
"
`;
